# platform.adaptation.samsung_exynos.xf86-video-exynos

./: .gitignore  CMakeLists.txt  COPYING  Makefile  Makefile.am  config.h.cmake  configure.ac  make_drv.sh  make_tests.sh
CMakeModules/: FindCheck.cmake
etc/: exynos_drv.conf
packaging/: xf86-video-exynos.spec  xorg-x11-drv-exynos.spec
src/: .gitignore  CMakeLists.txt  Makefile.am  _trace.h  common.h  exynos_driver.c  exynos_driver.c.orig  exynos_driver.h  exynos_drm_internal.h  sec.c  sec.h
src/accel/: exynos_accel.c  exynos_accel.h  exynos_accel_int.h  exynos_dri2.c  exynos_exa.c  exynos_exa_sw.c  exynos_present.c  sec_accel.h  sec_dri2.c  sec_dri3.c  sec_exa.c  sec_exa_g2d.c  sec_exa_sw.c  sec_present.c
src/crtcconfig/: sec_crtc.c  sec_crtc.h  sec_display.c  sec_display.h  sec_dummy.c  sec_dummy.h  sec_layer.c  sec_layer.h  sec_output.c  sec_output.h  sec_plane.c  sec_plane.h  sec_prop.c  sec_prop.h  sec_xberc.c  sec_xberc.h
src/debug/: sec_drmmode_dump.c  sec_drmmode_dump.h
src/display/: exynos_clone.c  exynos_clone.h  exynos_crtc.c  exynos_display.c  exynos_display.h  exynos_display_int.h  exynos_output.c  exynos_output.c.orig  exynos_plane.c
src/engine/: exynos_engine.c  exynos_engine.h  exynos_engine_pixman.c  exynos_engine_pixman.h
src/g2d/: fimg2d.c  fimg2d.h  fimg2d_reg.h  util_g2d.c
src/ipp/: sec_converter.c  sec_converter.h  sec_drm_ipp.c  sec_drm_ipp.h  sec_wb.c  sec_wb.h
src/memory/: sec_memory_flush.c  sec_memory_flush.h
src/neon/: copy_area.c  memcpy_neon.s  neonmem.h
src/util/: exynos_mem_pool.c  exynos_mem_pool.h  exynos_util.c  exynos_util.h  exynos_xdbg.h  sec_util.c  sec_util.h  sec_xdbg_wrapper.h
src/xv/: exynos_tvout.c  exynos_tvout.h  exynos_video.c  exynos_video.h  exynos_video_buffer.c  exynos_video_buffer.h  exynos_video_capture.c  exynos_video_capture.h  exynos_video_converter.c  exynos_video_converter.h  exynos_video_fourcc.h  exynos_video_image.c  exynos_video_image.h  exynos_video_ipp.c  exynos_video_ipp.h  exynos_video_overlay.c  exynos_video_overlay.h  sec_video.c  sec_video.h  sec_video_clone.c  sec_video_clone.h  sec_video_display.c  sec_video_display.h  sec_video_fourcc.h  sec_video_odroid.c  sec_video_odroid.h  sec_video_tvout.c  sec_video_tvout.h  sec_video_types.h  sec_video_virtual.c  sec_video_virtual.h  xv_types.h
tests/: CMakeLists.txt  Makefile  Makefile.am  main.c  main.h  main_test.c  prepares.c  test_accel.c  test_accel.h  test_clone.c  test_clone.h  test_crtc.c  test_crtc.h  test_display.c  test_display.h  test_dri2.c  test_dri2.h  test_exa.c  test_exa.h  test_exa_sw.c  test_exa_sw.h  test_fimg2d.c  test_fimg2d.h  test_mem_pool.c  test_mem_pool.h  test_output.c  test_output.h  test_plane.c  test_plane.h  test_stat.h  test_util.c  test_util.h  test_util_g2d.c  test_util_g2d.h  test_video.c  test_video.h  test_video_buffer.c  test_video_buffer.h  test_video_capture.c  test_video_capture.h  (+6 more)
tests/dependencies/X/: xorg-server.h
tests/dependencies/X/hw/xfree86/dri2/: dri2.h
tests/dependencies/X11/: XF86keysym.h  Xpoll.h
tests/dependencies/libdrm/: drm.h.rej  radeon_drm.h.orig  radeon_drm.h.rej
tests/dependencies/tbm/src/: tbm_bufmgr.c  tbm_bufmgr.h
tests/dependencies/udev/src/: libudev.c~  udev-event.c  udev-node.c  udev-rules.c  udev.h
tests/dependencies/xdbg/lib/: xdbg.h
tests/fakes/: drm.c  exynos_video_buffer.c  fake_drm.c  fake_drm.h  fake_mem.c  fake_mem.h  fake_other.c  fake_pixman.c  fake_tbm.c  fake_tbm.h  fake_udev.c  fake_x_and_os.c  fake_x_and_os.h  fake_xdbg.c  gc.c  mem.c  mem.h  other.c  tbm.c  x_and_os.c
tests/functional/: Makefile.am
tests/functional/xv_test/: Makefile  Makefile.am  data.c  data.h  test_xv_resize.c  test_xv_resize.h  xcb_api.c  xcb_api.h  xv_test.c  xv_test.h
tests/src/: test_sec.c
tests/src/accel/: test_sec_dri2.c  test_sec_exa.c  test_sec_exa_g2d.c  test_sec_exa_sw.c
tests/src/crtcconfig/: test_sec_crtc.c  test_sec_display.c  test_sec_dummy.c  test_sec_layer.c  test_sec_output.c  test_sec_plane.c  test_sec_prop.c  test_sec_xberc.c
tests/src/debug/: test_sec_drmmode_dump.c
tests/src/g2d/: test_fimg2d.c  test_util_g2d.c
tests/src/ipp/: test_sec_converter.c  test_sec_drm_ipp.c  test_sec_wb.c
tests/src/memory/: test_sec_memory_flush.c
tests/src/neon/: test_copy_area.c
tests/src/util/: test_sec_util.c
tests/src/xv/: test_sec_video.c  test_sec_video_display.c  test_sec_video_tvout.c  test_sec_video_virtual.c  test_sec_video_virtual.h
utils/: readme.txt  run.py  vs_utils.py
